# slurm-tools

./: .gitignore  Cargo.toml  fields.txt  useful_jq_cmds.md
src/: assign_resources.rs  clean_log.rs  config.rs  lib.rs  resource_limit.rs  sbatch_array.rs  sbatch_fake.rs  scancel_udeps.rs  sinteractive.rs  slurm_blame.rs
src/sbatch_array/: main.rs  parse.rs  push.rs  submit.rs
