[package]
name = "slurm-tools"
version = "0.5.0"
edition = "2021"
default-run = "sbatch-array"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "^3.1", features = ["derive"] }
indexmap = { version = "^1.8", features = ["serde"] }
lazy_static = "1.4.0"
libc = "0.2.121"
phf = {version = "0.10.1", features = ["macros"] }
regex = "1.5.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.79"
# posix-cli-utils = { path = "./posix-cli-utils"}
posix-cli-utils = { git = "https://github.com/ykrist/posix-cli-utils.git"}
format_num = "0.1.0"
# labrat = { path = "labrat" }
labrat = { git = "https://github.com/ykrist/labrat.git" }
os_pipe = "1.0.1"
tempfile = "3.3.0"
once_cell = "1.10.0"
dirs = "4.0.0"
whoami = "^1.2"
pwd = "1.3.1"
comfy-table = "5.0.1"

[[bin]]
name="sacct-clean-log"
path="src/bin/clean_log.rs"

[[bin]]
name="sacct-assign-resources"
path="src/bin/assign_resources.rs"

[[bin]]
name="sbatch-array"
path="src/bin/sbatch_array/main.rs"

[[bin]]
name="sbatch-fake"
path="src/bin/sbatch_fake.rs"

[[bin]]
name="scancel-udeps"
path="src/bin/scancel_udeps.rs"

[[bin]]
name="sinteractive"
path="src/bin/sinteractive.rs"

[[bin]]
name="slurm-blame"
path="src/bin/slurm_blame.rs"


